@@ -5,6 +5,11 @@
 //-  Programmer    : Logo Competitor
 //--------------------------------------------------------------------
 
+//--------------------------------------------------------------------
+// check if we should stop here
+//--------------------------------------------------------------------
+if (strlen($navigation_check) > 0) return;
+
 $rel_path = "../../..";
 
 //--------------------------------------------------------------------
@@ -23,11 +28,6 @@ $parent_site    = "news";
 $child_sites    = array();
 $requested_file = basename(my_get_global("PHP_SELF", "SERVER"));
 $this_site      = "logo_competition";
-
-//--------------------------------------------------------------------
-// check if we should stop here
-//--------------------------------------------------------------------
-if (strlen($navigation_check) > 0) return;
 
 //--------------------------------------------------------------------
 // load the layout file
