@@ -5,12 +5,12 @@
 //-  Programmer    : Logo Competitor
 //--------------------------------------------------------------------
 
-$rel_path = "../../..";
-
 //--------------------------------------------------------------------
 // check if we should stop here
 //--------------------------------------------------------------------
 if (strlen($navigation_check) > 0) return;
+
+$rel_path = "../../..";
 
 //--------------------------------------------------------------------
 // load some global definitions
